spring api: change http error codes